force-app/main/default/objects/Team_Member__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Age</label>
    <length>5</length>
    <type>Text</type>
</CustomField>