force-app/main/default/objects/Team_Member__c/fields/Age_Range__c.field-meta.xml
<CustomField>
    <fullName>Age_Range__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Age Range</label>
    <length>20</length>
    <type>Text</type>
</CustomField>