force-app/main/default/objects/Team_Member__c/fields/Calculation_Updates__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Updates__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Calculation Updates</label>
    <type>Date</type>
</CustomField>