force-app/main/default/objects/Team_Member__c/fields/Forename__c.field-meta.xml
<CustomField>
    <fullName>Forename__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Forename</label>
    <length>255</length>
    <type>Text</type>
</CustomField>