force-app/main/default/objects/Team_Member__c/fields/Surname__c.field-meta.xml
<CustomField>
    <fullName>Surname__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Surname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>