force-app/main/default/objects/Team_Member__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Forename__c</columns>
    <columns>Surname__c</columns>
    <columns>Date_of_Birth__c</columns>
    <columns>Age__c</columns>
    <columns>Age_Range__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>